read file contents to create a new ebook (and ebook tile)

--- a/app/src/main/res/layout/read_ebook_fragment.xml
+++ b/app/src/main/res/layout/read_ebook_fragment.xml
@@ -4,44 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:fillViewport="true"
     tools:context=".ReadEbookFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
-
-<!--        <Button-->
-<!--            android:id="@+id/button_second"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@string/previous"-->
-<!--            app:layout_constraintBottom_toTopOf="@id/title_string"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+        android:padding="0dp">
 
         <TextView
             android:id="@+id/title_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="84dp"
+            android:layout_marginTop="8dp"
             android:text="@string/lorem_ipsum"
             android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_second" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/content_string"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="45dp"
+            android:paddingStart="10sp"
+            android:paddingLeft="10sp"
+            android:paddingTop="30sp"
+            android:paddingEnd="10sp"
+            android:paddingRight="10sp"
+            android:paddingBottom="10sp"
             android:text="BookContent"
-            app:layout_constraintTop_toBottomOf="@+id/title_string"
-            tools:layout_editor_absoluteX="154dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_string" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
