Update read ebook screen layout

--- a/app/src/main/res/layout/read_ebook_fragment.xml
+++ b/app/src/main/res/layout/read_ebook_fragment.xml
@@ -17,22 +17,21 @@
             android:id="@+id/title_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="@string/lorem_ipsum"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/content_string"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="45dp"
+            android:layout_height="0dp"
             android:paddingStart="10sp"
             android:paddingLeft="10sp"
-            android:paddingTop="30sp"
+            android:paddingTop="5sp"
             android:paddingEnd="10sp"
             android:paddingRight="10sp"
             android:paddingBottom="10sp"
