Display one chapter at a time for EPUB files (with forward and backward navigation)

--- a/app/src/main/res/layout/read_ebook_fragment.xml
+++ b/app/src/main/res/layout/read_ebook_fragment.xml
@@ -16,9 +16,11 @@
 
         <TextView
             android:id="@+id/title_string"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:text="@string/lorem_ipsum"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,11 +37,33 @@
             android:paddingTop="5sp"
             android:paddingEnd="10sp"
             android:paddingRight="10sp"
-            android:paddingBottom="10sp"
+            android:paddingBottom="0sp"
             android:text="BookContent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_string" />
+
+        <Button
+            android:id="@+id/next_chapter_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Next"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/content_string" />
+
+        <Button
+            android:id="@+id/previous_chapter_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/content_string" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
