--- a/app/src/main/res/layout/read_ebook_fragment.xml
+++ b/app/src/main/res/layout/read_ebook_fragment.xml
@@ -31,7 +31,7 @@
         <TextView
             android:id="@+id/content_string"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:paddingStart="10sp"
             android:paddingLeft="10sp"
             android:paddingTop="5sp"
@@ -53,7 +53,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/content_string" />
+            app:layout_constraintTop_toBottomOf="@+id/content_string"
+            app:layout_constraintVertical_bias="0.002" />
 
         <Button
             android:id="@+id/previous_chapter_button"
@@ -64,6 +65,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/content_string" />
+            app:layout_constraintTop_toBottomOf="@+id/content_string"
+            app:layout_constraintVertical_bias="0.002" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
